# knowledge-lake

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.planning/: E2E-GAP-ANALYSIS.md  MILESTONE-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v2.5-MILESTONE-AUDIT.md  v2.6-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.5-MILESTONE-AUDIT.md  v2.5-REQUIREMENTS.md  v2.5-ROADMAP.md  v2.6-REQUIREMENTS.md
.planning/milestones/v1.0-research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md
.planning/milestones/v2.5-research/: PITFALLS.md  STACK.md
.planning/phases/01-foundation-end-to-end-spike/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-CONTEXT.md  01-REVIEW-FIX.md  01-REVIEW.iter1.md  01-REVIEW.iter2.md  01-UAT.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-ingestion/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-05-PLAN.md  02-06-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW-FIX.iter1.md  02-REVIEW-FIX.iter2.md  02-REVIEW.iter2.md  02-REVIEW.md  02-UAT.md
.planning/phases/03-parse-clean-chunk/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-REVIEW-FIX.iter1.md  03-REVIEW.iter2.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-enrichment-embedding-search/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-AI-SPEC.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-VERIFICATION.md
.planning/phases/05-curation-datasets-export/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-03-SUMMARY.md  05-AI-SPEC.md  05-CONTEXT.md  05-PATTERNS.md  05-RESEARCH.md  05-UAT.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-healthcare-domain-pack-full-surface-validation/: 06-01-PLAN.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-UAT.md  06-VERIFICATION.md
.planning/phases/07-metadata-foundation/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-REVIEW.md  07-SECURITY.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-crawl-maturation/: 08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-SUMMARY.md  08-04-SUMMARY.md  08-05-PLAN.md  08-06-PLAN.md  08-RESEARCH.md  08-REVIEW-FIX.md  08-REVIEW.iter2.md  08-REVIEW.md  08-VALIDATION.md
.planning/phases/09-storage-segmentation/: 09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-05-PLAN.md  09-06-PLAN.md  09-06-SUMMARY.md  09-DISCUSSION-LOG.md  09-REVIEW-FIX.iter2.md  09-REVIEW.iter2.md  09-REVIEW.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-hybrid-retrieval/: 10-01-PLAN.md  10-02-SUMMARY.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  (+12 more)
.planning/reports/: MILESTONE_SUMMARY-v1.0.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: api-reference.md  architecture.md  configuration.md  domain-packs.md  openai_tools.json  openapi.json  pipeline.md
domains/: README.md
domains/aviation/: domain.yaml  sources.yaml  taxonomy.yaml
domains/healthcare/: domain.yaml  filters.yaml  sources.yaml  taxonomy.yaml
infra/dagster/: dagster.yaml
infra/litellm/: config.yaml
infra/minio/: README.md
infra/postgres/: init.sql
infra/qdrant/: config.yaml
infra/searxng/: settings.yml
skills/: add-source.md  build-corpus.md  export-dataset.md  search-knowledge.md
src/knowledge_lake/: __init__.py  ids.py  lineage.py  version.py
tests/: conftest.py
tests/e2e/: test_e2e_healthcare.py
tests/fixtures/: __init__.py  cdc_icd_overview.html  cms_cop_sample.html  must_not_reject.yaml  nppes_npi_sample.csv
tests/integration/: conftest.py  test_api_lineage.py  test_api_new_endpoints.py  test_compose_health.py  test_crawl4ai_adapter.py  test_crawl_resume.py  test_crawl_robots_blocked.py  test_crawl_schema.py  test_dagster_assets.py  test_dedup_cli_dagster_parity.py  test_dedup_noop.py  test_dedup_reindex_survival.py  test_demo_spike.py  test_discovery_register.py  test_domain_init.py  test_export_parquet_duckdb.py  test_ingest_url_dedup.py  test_lineage.py  test_mcp_http.py  test_migrations.py  test_parse_structure.py  test_playwright_adapter.py  test_qdrant_alias_reindex.py  test_qdrant_hybrid_migration.py  test_raw_immutable.py  test_recrawl_concurrency.py  test_scrapy_subprocess.py  test_source_register.py  test_stdio_lockdown.py  test_storage.py  test_torture_corpus.py  test_upload.py
tests/unit/: test_api_route.py  test_api_search_mode.py  test_artifact_fields.py  test_asset_ordering.py  test_builtin_plugins.py  test_challenge_detection.py  test_chunk_storage.py  test_chunk_substance_gate.py  test_chunk_token.py  test_clean.py  test_clean_silver_key.py  test_cli_init_index.py  test_cli_quality_audit.py  test_cli_route.py  test_cli_search_mode.py  test_cli_tree_index.py  test_crawl_all.py  test_crawler_select.py  test_curate.py  test_dagster_e2e_job.py  test_dagster_retry_policies.py  test_datasets.py  test_dedup.py  test_deterministic.py  test_discover_domain.py  test_discovery.py  test_domain_loader.py  test_domain_packs.py  test_domain_scaffold.py  test_enrich.py  test_enrich_domain_override.py  test_export.py  test_export_domain_filter.py  test_fallback_chain.py  test_fetch_redirect_ssrf.py  test_format_tags.py  test_gate_signature_pin.py  test_healthcare_prompts.py  test_healthcare_sources.py  test_healthcare_validator.py  (+50 more)
(+438 files in other folders)
