[project]
name = "knowledge-lake"
version = "0.1.0"
description = "A domain-agnostic framework for turning domain resources into AI-ready assets with full lineage traceability"
readme = "README.md"
authors = [
    { name = "Jeevan J", email = "jeevan.jamakayala@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg[binary]==3.3.4",
    "boto3==1.43.39",
    "docling==2.108.0",
    "sentence-transformers==5.6.0",
    "qdrant-client==1.18.0",
    "litellm==1.90.2",
    "dagster==1.13.11",
    "dagster-webserver==1.13.11",
    "fastapi==0.139.0",
    "uvicorn==0.49.0",
    "typer>=0.12.5,<0.25.0",
    "structlog>=26,<27",
    "tenacity==9.1.4",
    "httpx==0.28.1",
    "xxhash==3.8.0",
    "orjson==3.11.9",
    "dagster-postgres==0.29.11",
    "uuid-utils>=0.16.2",
    "protego>=0.3.1",
    "tldextract>=5.1.0",
]

[project.scripts]
klake = "knowledge_lake.cli.app:app"

[project.entry-points."knowledge_lake.parsers"]
docling = "knowledge_lake.plugins.builtin.docling_parser:DoclingParser"

[project.entry-points."knowledge_lake.embedders"]
local = "knowledge_lake.plugins.builtin.st_embedder:SentenceTransformerEmbedder"
litellm = "knowledge_lake.plugins.builtin.st_embedder:LiteLLMEmbedder"

[project.entry-points."knowledge_lake.vectorstores"]
qdrant = "knowledge_lake.plugins.builtin.qdrant_store:QdrantVectorStore"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_imports = true
warn_return_any = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "hypothesis>=6.100",
]

[tool.dagster]
module_name = "knowledge_lake.dagster_defs.definitions"
