[project]
name = "knowledge-lake"
version = "0.1.0"
description = "A domain-agnostic framework for turning domain resources into AI-ready assets with full lineage traceability"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Jeevan J", email = "jeevan.jamakayala@gmail.com" }
]
maintainers = [
    { name = "XploreOS" }
]
keywords = [
    "knowledge-lake",
    "data-lake",
    "rag",
    "llm",
    "lineage",
    "etl",
    "vector-search",
    "dagster",
    "ai-datasets",
    "document-parsing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Database",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg[binary]==3.3.4",
    "boto3==1.43.46",
    "docling==2.112.0",
    "sentence-transformers==5.6.0",
    "qdrant-client==1.18.0",
    "fastembed>=0.8,<0.9",
    "litellm==1.92.0",
    "dagster==1.13.11",
    "dagster-webserver==1.13.11",
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "typer>=0.12.5,<0.25.0",
    "structlog>=26,<27",
    "tenacity==9.1.4",
    "httpx==0.28.1",
    "xxhash==3.8.1",
    "orjson==3.11.9",
    "dagster-postgres==0.29.11",
    "uuid-utils>=0.17.0",
    "protego>=0.3.1",
    "tldextract>=5.1.0",
    "crawl4ai==0.9.1",
    "scrapy==2.17.0",
    "playwright==1.61.0",
    "datasketch==2.0.0",
    "lingua-language-detector==2.2.0",
    "datatrove==0.9.0",
    "nltk>=3.10.0,<4",
    "polars==1.42.1",
    "duckdb==1.5.4",
    "pyarrow==25.0.0",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "mcp==1.28.1",
]

[project.urls]
Homepage = "https://github.com/XploreOS/knowledge-lake"
Repository = "https://github.com/XploreOS/knowledge-lake"
Documentation = "https://github.com/XploreOS/knowledge-lake/tree/main/docs"
Issues = "https://github.com/XploreOS/knowledge-lake/issues"
Changelog = "https://github.com/XploreOS/knowledge-lake/blob/main/CHANGELOG.md"

[project.scripts]
klake = "knowledge_lake.cli.app:app"

[project.entry-points."knowledge_lake.parsers"]
docling = "knowledge_lake.plugins.builtin.docling_parser:DoclingParser"
json_xml = "knowledge_lake.plugins.builtin.json_xml_parser:JsonXmlParser"
unstructured = "knowledge_lake.plugins.builtin.unstructured_parser:UnstructuredParser"
tika = "knowledge_lake.plugins.builtin.tika_parser:TikaParser"

[project.entry-points."knowledge_lake.embedders"]
local = "knowledge_lake.plugins.builtin.st_embedder:SentenceTransformerEmbedder"
litellm = "knowledge_lake.plugins.builtin.st_embedder:LiteLLMEmbedder"

[project.entry-points."knowledge_lake.vectorstores"]
qdrant = "knowledge_lake.plugins.builtin.qdrant_store:QdrantVectorStore"

[project.entry-points."knowledge_lake.crawlers"]
crawl4ai = "knowledge_lake.plugins.builtin.crawl4ai_adapter:Crawl4AIAdapter"
scrapy = "knowledge_lake.plugins.builtin.scrapy_adapter:ScrapyAdapter"
playwright = "knowledge_lake.plugins.builtin.playwright_adapter:PlaywrightAdapter"

[project.entry-points."knowledge_lake.discovery"]
searxng = "knowledge_lake.plugins.builtin.searxng_discovery:SearXNGDiscovery"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
markers = [
    "browser: marks tests that require a Playwright Chromium binary (skip with -m 'not browser' or when binary absent)",
    "integration: marks integration tests that may require running services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI and Typer require these calls in argument defaults (Query/Option/etc.);
# they are effectively immutable sentinels, not mutable-default anti-patterns.
extend-immutable-calls = [
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Depends",
    "typer.Option",
    "typer.Argument",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.15.21",
    "hypothesis>=6.156.6",
]

[tool.dagster]
module_name = "knowledge_lake.dagster_defs.definitions"
